--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>demo.3.mysql</artifactId>
+	<artifactId>tool.export.database</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>demo.3.mysql</name>
+	<name>tool.export.database</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
