--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,13 @@ spring.datasource.password=n26vtx
 # spring.datasource.password=flex
 
 
-#mybatis.mapper-locations=classpath:map/*.xml
 mybatis.config-location=classpath:mybatis.config.xml 
 mybatis.mapper-locations=classpath:mapper/*.xml
+
+logging.file.path=C://Working_Projects/SpringBoot/tool.export.database
+logging.file.name=spring.logs
+logging.level.org.mybatis=DEBUG
+#mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
 #spring.jpa.open-in-view=false
 #server.error.whitelabel.enabled=false
